Comtypes CHANGELOG
==================

Release 1.1.11
-------------
 * Fix Python 3 compatibility. Thanks @kdschlosser.
 * Fix `tlib_mtime` in the absence of typelib.
 * Fix 64bit inproc server.

Release 1.1.10
-------------
 * Fix loading module from relative path on Windows 7.

Release 1.1.9
-------------
 * Fix loading module from relative path.
 * Use comtypes release version in code generator version check.

Release 1.1.8
-------------
 * Fix No module named 'comtypes.gen.stdole'. Thanks @fxthomas.
 * Fix NumPy >= 1.16 support. Thanks @mobiusklein.
 * Use the embedded timestamp for cache invalidation. Thanks @vijairaj.
 * Allow customization of shutdown behavior (It fixes crash during exit in applications that embed Python). Thanks @lassoan.
 * Extend GetModule() with CLSID support. Thanks @forderud.
 * Fix invalid handling of WindowsError on Python 3. Thanks @leonardder.
 * End bdist_wininst support in setup.py. Thanks @wkschwartz.
 * Drop Windows CE support. Thanks @forderud.

Release 1.1.7
-------------
 * Fix command ``pip install comtypes --no-cache-dir --target="C:\tmp"`` (issue #158).

Release 1.1.6
-------------
 * Fix ``pip install comtypes`` error: "option --single-version-externally-managed
   not recognized" (issue #155).

Release 1.1.5
-------------
 * Fix using temp directory as a cache folder when it has no write permission.
   Thanks to @kviktor, @totaam, @morganwillcock, @kongxinchi, @Chaoste
   for their pull requests and patience.
 * Revive ``clear_comtypes_cache.py`` and add it to post-install step.
 * Fix hang in ``CreateObject`` for restricted user (#124).

Release 1.1.4
-------------

 * Fix TypeError when gen folder is unwriteable and it is a
   namespace package (#102). Thanks to @orf for the bug report. Thanks
   to @jornb for the initial proposal demonstrating a workaround.

Release 1.1.3
-------------

 * Fix SyntaxError caused by enums containing python keywords. Thanks to
   @laripk for the fix and @janbrohl for the bug report.
