@@ -1,4 +1,4 @@
-image: Visual Studio 2015
+image: Visual Studio 2022
 build: off
 max_jobs: 3
 
@@ -9,8 +9,6 @@ shallow_clone: true
  
 environment:
    matrix:
-     - py: Python26
-     - py: Python26-x64
      - py: Python27
      - py: Python27-x64
      - py: Python33
@@ -21,6 +19,10 @@ environment:
      - py: Python35-x64
      - py: Python36
      - py: Python36-x64
+     - py: Python39
+     - py: Python39-x64
+     - py: Python310
+     - py: Python310-x64
 
 test_script:
    - C:\%py%\python.exe setup.py install
